--- a/Youtube-Premium -bytthai.conf
+++ b/Youtube-Premium -bytthai.conf
@@ -2,6 +2,7 @@
 /****************************** 
 📌 Tác Giả：Triệu Thái 
 📌 Cập Nhật：27-2-2025   
+📌 Link: https://raw.githubusercontent.com/Triutheis/vifast/main/Youtube-Premium%20-bytthai.conf
 📌 Liên Lạc：Zalo: 0389293178  
 📌 Face Book: https://www.facebook.com/Nongtrieuthai19
 ******************************/
