--- a/Youtube_Premium.conf
+++ b/Youtube_Premium.conf
@@ -1,4 +1,7 @@
 # Shadowrocket: 2024-12-19 09:42:51
+#!url: https://raw.githubusercontent.com/Triutheis/vifast/main/Youtube_Premium.conf
+#!name: Youtube Premium
+#!desk: By Tthai
 [General]
 private-ip-answer = true
 include = default.conf
